syntax = "proto3";
package media;

import "google/protobuf/empty.proto";

message VideoChunk {
  string filename = 1;   
  bytes content = 2;     
  int64 seq = 3;         
  bool eof = 4;   
}

message UploadStatus {
  bool ok = 1;
  string message = 2;
  string storedPath = 3;
  // Relative path on consumer for HTTP serving
}

service MediaService {
  // Client-streaming upload
  rpc UploadVideo (stream VideoChunk) returns (UploadStatus);
}