syntax = "proto3";

package media;

option go_package = "github.com/example/mediaupload/proto;media";

service MediaUploadService {
  // Client-streaming upload: producer sends chunks, server replies once.
  rpc UploadVideo(stream VideoChunk) returns (UploadStatus);
}

message VideoChunk {
  string producer_id = 1;
  string file_name = 2;
  bytes data = 3;
}

message UploadStatus {
  enum Result {
    OK = 0;
    QUEUE_FULL = 1;
    DUPLICATE = 2;
    ERROR = 3;
  }

  Result result = 1;
  string message = 2;
  string video_id = 3;
}
